--- a/vignettes/comptes.Rmd
+++ b/vignettes/comptes.Rmd
@@ -1,15 +1,19 @@
 ---
-title: "Description des comptes du cochon 2019"
+title: "Compte-rendu du weekend cochon du 1er au 3 février 2019"
 author: "Benjamin Louis"
 date: "`r format(Sys.Date(), '%d-%m-%Y')`"
 output:
+  pagedown::html_paged:
+    number_sections: true
+    toc: yes
   rmarkdown::html_vignette:
+    toc: yes
+    number_sections: yes
   pdf_document:
     keep_tex: yes
     latex_engine: xelatex
-  pagedown::html_paged:
-    number_sections: false
-    css: ["my_style.css", "default-fonts", "default-page", "default"]
+    toc: yes
+    number_sections: yes
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEncoding{UTF-8}
@@ -39,108 +43,200 @@ data(coefs)
 data(depenses)
 ```
 
+# Bilan du weekend
+
+## Déroulement du weekend
+
+--------------- A VENIR ----------------------
+
+## Ce qui a été dit
+
+Suite à ce merveilleux weekend, quelques phrases de bilan ont été évoquées. Les voici donc :
+
+>
++ Très bon week-end (on s'en fout je sais, c'est pas très constructif)
++ trop de sel dans la terrine et pas assez dans le jambonneau (qui, au passage, a été validé par Olivier, il a dit essai réussi)
++ Peut-être mettre un peu moins de matière dans les moules à jambonneau pour avoir plus de gelée. Faire cuire avec de l'eau salée et un bouquet garni. Possibilité de faire 2 fournées de jambonneaux si on veut
++ prévoir plus de verdure si on veut plus de caillettes (répondre aux appels à l'aide d'Estelle le moment venu)
++ Faire plus cuire les boudins blancs si possible
++ Les boudins créoles plus épicés (et pourtant je suis sensible)
++ Ne pas oublier d'acheter les noisettes en plus pour le saucisson (on peut partir par exemple sur 80g /kg, c'est ce qu'on a eu fait)
++ pour le pâté de tête, j'en ai pas pris mais je suis curieux de connaître votre avis. Possibilité d'utiliser les moules d'Olivier pour en faire du frai (un peu comme les jambonneaux)
++ Très bon weekend et supers repas nombreux, j'ai bcp aimé ça.
++ Même remarque que Luc sur la terrine au four, moins de sel ; la quantité de noisettes est super ;et idem pour les boudins blancs, ça pourrait être au moins 20'.
++ Le pâté de tête est bien bon, il fait presque rillettes, l'intérêt c'est que ça a inspiré des amis qui n'aiment pas d'habitude. C'est bien les poireaux dedans. Peu salé mais salé comme il faut je trouve.
++ Le dimanche d'avant, on pourrait juste s'avancer en lavant des pots et des cagettes plastique si besoin (parce que pendant le weekend, je trouve qu'on en a marre d'avoir les mains mouillées)
++ on est super content de vous avoir tous accueilli pour ce week-end
++ merci à "ceux qui savent" quoi faire quand et comment, moi ça me va très bien de me laisser porter, sans le soucis ! (Marian)
++ trop bonnes les rillettes, parfaites à notre gout
++ ok pour le sel dans la terrine et dans les jambonneaux (trop et pas assez) et les épices dans le créole
++ pour le reste on n'a pas encore tout gouté !
++ l'année prochaine, on proposera de faire un boudin ardéchois (il restait du sang !)
++ allez les verts (pour les caillettes)
+
+
 # Généralités
 
-## Prix global de la viande
+## Quelques chiffres sur les cochons
+
+Un peu de données générales sur les cochons. Dans ce tableau je distingue la viande (morceaux qu'on garde entier) de la chair (morceaux hachés). Les poids de viande et de chair donnent un total d'environ 133kg ce qui donne un rendement de 57%. Dans ce rendement, il y a cependant un peu d'os (jambon, côte de porc), donc il est plutôt estimé à la hausse.
 
 ```{r}
 gener %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 1")
 ```
 
+## Quelques chiffres sur les consommables utilisés
+
+---------------- A VENIR ----------------------
+
+## Prix global de la viande
+
+Pour calculer un prix pour les différentes recettes, j'ai ramené le prix de la carcasse au poids de viande + chair + foies. Le foie étant limitant, j'ai choisi de lui donner une valeur au même titre que la viande (sinon le pâté de foie ne valait rien). Au final, on obtient un prix de 8,34 €/kg.
+
+
 ## Répartition dans les recettes
+
+Le prochain tableau donne les poids de viande, chair, foies et total qu'il y a dans chaque recette et l'équivalent en prix. Ce tableau me sert surtout pour calculer ci-après le poids unitaire des recettes en fonction de leur conditionnement.
 
 ```{r}
 recettes %>% 
   mutate_if(is.numeric, ~recode(., `0` = NA_real_)) %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 2")
 ```
 
 # Prix des différentes recettes en fonction de leur conditionnement
 
 ## Méthode de calcul
 
-Bien qu'un travail collectif de collecte de données ait été effectué lors de ce week-end, certaines données sont manquantes ou trop imprécises pour pouvoir calculer un prix exact de chaque recette. Ainsi certaines simplifications méthodologiques ont du être faites.
+Bien qu'un travail collectif de collecte de données ait été effectué lors de ce week-end, certaines données sont manquantes ou trop imprécises pour pouvoir calculer un prix exact de chaque recette. Certaines simplifications méthodologiques ont du être faites.
 
-+ Le prix d'une recette est calculé par rapport au prix de la quantité de viande et/ou foie et/ou chair qu'elles contient
++ Le prix d'une recette est calculé par rapport au prix de la quantité de viande et/ou foie et/ou chair qu'elle contient
 
 + Le gras n'étant pas limitant il n'est pas comptabilisé (ou son prix est égal à 0€ si vous préférez). Ainsi, plus une recette contient en proportion du gras, moins elle est chère en unité de poids. He oui, le cholestérol ne vaut pas grand chose!
 
 + Les autres ingrédients des différentes recettes sont intégrés dans le prix total des courses du weekend qui est divisé au prorata du nombre de personnes. Le prix des ingrédients n'est donc pas contenu dans le prix des recettes.
 
-+ De même, les boyaux sont intégrés au prix total des courses et non pas dans le prix des différentes recettes. on pourrait en théorie le faire mais les données sont trop imprécises pour que ça ait du sens. Une estimation très rapide _"à la louche"_ conduit à un prix d'environ 30 cents de boyau pour une saucisse sèche ou un saucisson, environ 20 cents de boyau pour une chipo et environ 3 cents de boyau pour une saucisse fraiche ou un boudin.
++ De même, les boyaux sont intégrés au prix total des courses et non pas dans le prix des différentes recettes. On pourrait en théorie le faire mais les données sont trop imprécises pour que ça ait du sens. Une estimation très rapide _"à la louche"_ conduit à un prix d'environ 30 cents de boyau pour une saucisse sèche ou un saucisson, environ 20 cents de boyau pour une chipo et environ 3 cents de boyau pour une saucisse fraiche ou un boudin.
+
+__Méthode 1__
+
+Lorsque les recettes sont conditionnées en produit de différentes tailles, un premier calcul consiste à évaluer le prix unitaire des différents conditionnement. La taille du conditionnement donne un coefficient qui, associé à la quantité faite de chaque conditionnement et le prix total de la recette, permet de etrouver le prix unitaire. Je sais que beaucoup s'en foute, mais moi j'adore mettre des formules, alors la voici :
+
+$$PUproduit_{ij} = \frac{coef_{ij} \times P_{total_{j}}}{\sum_{i}\left(coef_{ij} \times quantite_{ij}\right)}$$
+
+où $PUproduit_{ij}$ est le prix unitaire du produit (ou conditionnement) $i$ d'une recette $j$, $coef_{ij}$ est le coefficient associé à ce conditionnement, $P_{total_{j}}$ est le prix de revient total de la recette $j$ (cf Tableau 2) et $quantite_{ij}$ est la quantité totale faite de contionnement $i$ pour la même recette $j$.
+
+Une fois qu'on a le prix unitaire d'un conditonnement, il suffit de le multiplier par la quantité que chaque personne/famille a pris pour savoir ce que doit la personne/famille pour cette recette :
+
+$$Prix_{jk} = \sum_{i}\left(nb_{ijk} \times PUproduit_{ij}\right)$$
+où $Prix_{jk}$ est le prix que doit payer la personne/famille $k$ pour la recette $j$, $nb_{ijk}$ est le nombre du conditionnement $i$ de la recette $j$ prix par la personne/famille $k$ et $PUproduit_{ij}$ est le prix unitaire du produit (ou conditionnement) $i$ de la recette $j$.
+
+__Méthode 2__
+
+Si il n'y a qu'un conditionnement pour une recette, c'est directement la quantité prise par une personne/famille qui est utilisée comme coefficient associé au prix total de la recette pour calculer ce que doit la personne/famille. Ce coefficient peut être un nombre d'unité prise (e.g. j'ai pris 10 caillettes), un poids (e.g. j'ai pris 500g de chipolatas) ou une part (e.g. j'ai pris une part de jambon).
+
+$$Prix_{jk} = \frac{w_{jk} \times P_{total_{j}}}{\sum_{k} w_{jk}}$$
+où où $Prix_{jk}$ est le prix que doit payer la personne/famille $k$ pour la recette $j$, $w_{jk}$ est le coefficient représentant la quantité de la recette $j$ prise par la personne/famille $k$ et $P_{total_{j}}$ est le prix de revient total de la recette $j$ (Tableau 2).
+
+Pour les plus passionnés, suspicieux, fous ou ceux qui s'ennuient, normalement vous avez tout dans ce document pour refaire les calculs et vérifier que je ne me suis pas trompé. Mais attention, les chiffres qui sont dans les tableaux peuvent avoir des décalages de quelques grammes ou centimes à cause des arrondis (j'allais pas laisser plus de deux chiffres décimaux). par contre, vous verrez qu'à la fin on tombe bien!
 
 ## Terrine et pâtés
 
 ### Pâté de foie
 
-```{r}
-pu_foie <- get_unitaire("pate_foie") 
-price_foie <- get_price("pate_foie", unit = pu_foie)
+La méthode 1 a été appliquée pour le pâté de foie donnant un prix unitaire de 0.46 € pour le spots de 130 ml et de 0.93 € pour les pots de 260 ml (oui c'est pas tout à fait le double mais souvenez-vous, les arrondis&nbsp;!!!).
 
+```{r}
+pu_foie <- get_unitaire("pate_foie")
 pu_foie %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 3")
+```
+
+Ce qui en fonction de ce que chacun a pris donne le tableau (Tableau 4) suivant des prix à payer par personne/famille pour cette recette.
+
+```{r}
+price_foie <- get_price("pate_foie", unit = pu_foie)
 price_foie %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 4")
 ```
 
 ### Pâté de campagne
 
-```{r}
-pu_campagne <- get_unitaire("pate_campagne") 
-price_campagne <- get_price("pate_campagne", unit = pu_campagne)
+Même travail pour le pâté de campagne acvec la méthode 1.
 
+```{r}
+pu_campagne <- get_unitaire("pate_campagne")
 pu_campagne %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 5")
+```
+
+Et le tableau des prix à payer.
+
+```{r}
+price_campagne <- get_price("pate_campagne", unit = pu_campagne)
 price_campagne %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 6")
 ```
 
 ### Terrine au four
+
+La terrine au four a été divisée en 8 parts (dont une donnée). La méthode 2 est utilisée.
+
 
 ```{r}
 pu_terrine <- recettes %>% filter(recettes == "terrine_four") %>% pull(prix_total)
 price_terrine <- get_price("terrine_four", unit = pu_terrine)
 
 price_terrine %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 7")
 ```
 
 ### Jambonneau
+
+Même méthode 2 pour les jambonneaux qui ont été divisés en 8 parts dont une consommée en commun.
 
 ```{r}
 pu_jambonneau <- recettes %>% filter(recettes == "jambonneau") %>% pull(prix_total)
 price_jambonneau <- get_price("jambonneau", unit = pu_jambonneau)
 
 price_jambonneau %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 8")
 ```
 
 ### Caillettes
+
+Les caillettes sont considérées comme ayant toutes le même poids de viande. Le nombre prit par chaque personne/famille fait office de coefficient pour la méthode 2.
 
 ```{r}
 pu_caillettes <- recettes %>% filter(recettes == "caillettes") %>% pull(prix_total)
 price_caillettes <- get_price("caillettes", unit = pu_caillettes)
 
 price_caillettes %>%
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 9")
 ```
 
 ### Pâté de tête et rillettes
 
+D'un commun accord, le pâté de tête et les rillettes sont considérées comme ayant un coût de viande égal à 0€ car issus de partie qui serait jetées sinon.
+
 ## Boudin
 
 ### Boudin blanc
+
+Le boudin blanc contient de la chair et on considère que chaque boudon en contien la même quantité. On utilise la méthode 2 avec comme coefficients le nombre de boudin pris par chaque personne/famille.
 
 ```{r}
 pu_boudin_blanc <- recettes %>% filter(recettes == "boudin_blanc") %>% pull(prix_total)
 price_boudin_blanc <- get_price("boudin_blanc", unit = pu_boudin_blanc)
 
 price_boudin_blanc %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 10")
 ```
 
 ### Boudins noir et créole
+
+D'un commun accord, les boudins noir et créole sont considérés comme ayant un coût de viande égal à 0€ car issus de partie qui serait jetées sinon.
 
 ## Saucisses fraiches et chipolatas
 
@@ -161,165 +257,210 @@ prix_saucisses <- recettes %>% filter(recettes == "saucisses_fraiches") %>% pull
 pu_saucisses_fraiches <- tibble(produit = "saucisses_fraiches",
                                 prix_unitaire = prix_saucisses/nb_saucisses)
 price_saucisses_fraiches <- get_price("saucisses_fraiches", unit = pu_saucisses_fraiches)
+```
 
+Pour les saucisses fraiches, on considère que chaque saucisse contient la même quantité de viande. Sur le coût de revient total de cette recette (Tableau 2), des saucisses ont été prises seules et d'autres sont dans certains bocaux de viande (4 dans les bocaux de saucisses seules et 2 dans le sbocaux de saucisses/viande). Il faut d'abord calculer le prix de revient d'une saucisses en considérant la totalité faite de saucisses. En comptant les fraiches et celles mises en bocaux, au total, `r nb_saucisses` saucisses ont été faites. Le tableau 2 nous dit que le coût total des saucisses est de `r round(prix_saucisses, 2)`€ donc le coût unitaire d'une saucisse est de `r round(pull(pu_saucisses_fraiches, prix_unitaire), 2)`€.
+
+Le tableau 11 donne ce que doit payer chaque personne/famille sur les saucisses fraiches seulement avec la méthode 2 en prenant comme coefficient le nombre de saucisses fraiches prises. Celles mises en bocaux seront comptabilisées dans le prix des bocaux.
+
+```{r}
 price_saucisses_fraiches %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 11")
 ```
 
 ### chipolatas
+
+La méthode 2 est également utilisée ici avec comme coefficients le poids de chipolatas pris par chaque personne/famille, ce qui en fait surement un coût plus précis que pour les saucisses fraiches.
 
 ```{r}
 pu_chipo <- recettes %>% filter(recettes == "chipolatas") %>% pull(prix_total)
 price_chipo <- get_price("chipolatas", unit = pu_chipo)
 
 price_chipo %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 12")
 ```
 
 ## Saucisses sèches et saucissons
 
 ### Saucisses sèches
 
+On considère ici aussi que chaque saucisse sèche contient la même quantité de viande et le nombre prix par chaque personne/famille sert de coefficient dans la méthode 2.
+
+__N.B.__ à mon avis ici il y a plus de différence que pour les saucisses fraiches où les caillettes. Il serait surement plus précis les autres années de peser avant séchage chaque saucisse est de répartir directement. Cela demande un peu plus de logistique car il faut marquer chaque saucisse pour redistribuer convenablement après séchage.
+
 ```{r}
 pu_saucisses_seches <- recettes %>% filter(recettes == "saucisses_seches") %>% pull(prix_total)
 price_saucisses_seches  <- get_price("saucisses_seches", unit = pu_saucisses_seches)
 
 price_saucisses_seches %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 13")
 ```
 
-### saucissons
+### Saucissons
+
+Même travail que pour les saucisses sèches avec la même remarque sur une pesée et répartition avant séchage.
 
 ```{r}
 pu_saucissons <- recettes %>% filter(recettes == "saucissons") %>% pull(prix_total)
 price_saucissons  <- get_price("saucissons", unit = pu_saucissons)
 
 price_saucissons %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 14")
 ```
 
-### chorizo
+### Chorizo
+
+Même travail et remarque que pour les saucisses sèches et saucissons.
 
 ```{r}
 pu_chorizo <- recettes %>% filter(recettes == "chorizo") %>% pull(prix_total)
 price_chorizo  <- get_price("chorizo", unit = pu_chorizo)
 
 price_chorizo %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 15")
 ```
 
 ## Bocaux viandes
 
 ### Bocaux viandes et/ou saucisses
 
-```{r}
-pu_bocaux_viandes <- get_unitaire("bocaux_viandes", prix_sauc = pull(pu_saucisses_fraiches, prix_unitaire)) 
-price_bocaux_viandes <- get_price("bocaux_viandes", unit = pu_bocaux_viandes)
+Les bocaux de viande sont conditionnés en bocaux de différentes tailles avec de la viande seule, de la saucisse seule ou bien les deux. La méthode 1 est appliquée avec la petite différence qu'il faut ajouter le prix des saucisses lorsqu'il y en a. Pour les coefficients liés à a viande, on considère que le bocaux de viande pour 1-2 personnes contiennent environ 200g, ceux de 3-4 personnes environ 400g, ceux qui mélangent viande et saucisses environ 300g. Pour les saucisses, on considère qu'il y en a 2 dans le bocaux saucisses et viande et 4 dans les bocaux de saucisses uniquement.
 
+```{r}
+pu_bocaux_viandes <- get_unitaire("bocaux_viandes", prix_sauc = pull(pu_saucisses_fraiches, prix_unitaire))
 pu_bocaux_viandes %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 16")
+```
+
+Le bocal de saucisses seules revient à 3,42€, le bocal de mélangent viande saucisses à 4,28€, le bocal de viande pour 1-2 personnes à 1,71€ et le bocal de viande pour 3-4 personnes à 3,43€. 
+
+```{r}
+price_bocaux_viandes <- get_price("bocaux_viandes", unit = pu_bocaux_viandes)
 price_bocaux_viandes %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 17")
 ```
 
 ### Bocaux jambonneau
+
+On considère que la même quantité de jambonneau a été mise dans les 3 bocaux.
 
 ```{r}
 pu_bocaux_jambonneau <- recettes %>% filter(recettes == "bocaux_jambonneau") %>% pull(prix_total) 
 price_bocaux_jambonneau <- get_price("bocaux_jambonneau", unit = pu_bocaux_jambonneau)
 
 price_bocaux_jambonneau %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 18")
 ```
 
 ## Viandes fraiches
 
 ### Côte de porc
 
+La méthode 2 est appliquée avec comme coeffficients les poids pris par chacun.
+
 ```{r}
 pu_cote_de_porc <- recettes %>% filter(recettes == "cote_de_porc") %>% pull(prix_total)
 price_cote_de_porc  <- get_price("cote_de_porc", unit = pu_cote_de_porc)
 
 price_cote_de_porc %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 19")
 ```
 
 ### Rouelle
+
+La méthode 2 est appliquée avec comme coeffficients les poids pris par chacun.
 
 ```{r}
 pu_rouelle <- recettes %>% filter(recettes == "rouelle") %>% pull(prix_total)
 price_rouelle  <- get_price("rouelle", unit = pu_rouelle)
 
 price_rouelle %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 20")
 ```
 
 ### Roti
+
+La méthode 2 est appliquée avec comme coeffficients les poids pris par chacun.
 
 ```{r}
 pu_roti <- recettes %>% filter(recettes == "roti") %>% pull(prix_total)
 price_roti  <- get_price("roti", unit = pu_roti)
 
 price_roti %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 21")
 ```
 
 ### Filet mignon
+
+Le filet mignon a été mangé ensemble, son prix total va dans les dépenses communes.
 
 ```{r}
 pu_filet_mignon <- recettes %>% filter(recettes == "filet_mignon") %>% pull(prix_total)
 price_filet_mignon  <- get_price("filet_mignon", unit = pu_filet_mignon)
 
 price_filet_mignon %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 22")
 ```
 
 ### Ribs
+
+Les ribs seront mangées ensemble, leur prix total va dans les dépenses communes.
 
 ```{r}
 pu_ribs <- recettes %>% filter(recettes == "ribs") %>% pull(prix_total)
 price_ribs  <- get_price("ribs", unit = pu_ribs)
 
 price_ribs %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 23")
 ```
 
 ## Viandes sèches
 
 ### Poitrine
 
+On considère que les huit poitrines ont le même poids (car elles n'ont pas été pesées individuellement avant pesage). Le nombre de poitrines prises par personne/famille correspond aux coefficients pour la méthode 2.
+
 ```{r}
 pu_poitrine <- recettes %>% filter(recettes == "poitrine") %>% pull(prix_total)
 price_poitrine  <- get_price("poitrine", unit = pu_poitrine)
 
 price_poitrine %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 24")
 ```
 
 ### Jambon
+
+On divisera le jambon en 7 parts égales que l'on répartira entre chaque personne/famille. 
 
 ```{r}
 pu_jambon <- recettes %>% filter(recettes == "jambon") %>% pull(prix_total)
 price_jambon  <- get_price("jambon", unit = pu_jambon)
 
 price_jambon %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 25")
 ```
 
 ### Autres viandes
+
+Comme pour le jambon, on divisera le jambon en 7 parts égales que l'on répartira entre chaque personne/famille. 
 
 ```{r}
 pu_autres_viandes_seches <- recettes %>% filter(recettes == "autres_viandes_seches") %>% pull(prix_total)
 price_autres_viandes_seches  <- get_price("autres_viandes_seches", unit = pu_autres_viandes_seches)
 
 price_autres_viandes_seches %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 26")
 ```
 
 
 # Prix à payer par personne
 
 ## La viande
+
+Une fois qu'on a fait la calcul pour toutes les recettes, pour connaître ce que doit la personne/famille $k$, il suffit de sommer l'ensemble de ce qu'elle doit pour chaque recette.
+
+$$Prix_{k} = \sum_{i} Prix_{jk}$$
+où $Prix_{k}$ est le prix que doit la personne/famille $k$ pour l'ensemble des recettes.
 
 ```{r}
 all_prices <- bind_rows(
@@ -350,11 +491,13 @@ all_prices <- bind_rows(
   summarise(doit_payer = sum(doit_payer))
 
 all_prices %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 27")
 ```
 
 
 ## Achats commun
+
+Le tableau 28 résume les achats communs, toutes personnes/familles confondues. Sont ajoutés dedans le coût de revient de la viande en commun i.e. celle mangée ensemble (`commun`), celle donnée (`dons`) et la casse qu'il y a eu (`casse`).
 
 ```{r}
 price_commun <- bind_rows(
@@ -371,9 +514,10 @@ price_commun <- bind_rows(
 price_commun_total <- pull(price_commun, doit_payer) %>% sum
 
 price_commun %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 28")
 ```
 
+Le coût de ces achats communs sont répartis entre les personnes/familles au prorata du nombre de personnes, les enfants n'étant pas comptés.
 
 ```{r}
 all_commun <- all_prices %>% 
@@ -383,10 +527,12 @@ all_commun <- all_prices %>%
   mutate(doit_payer = nb_personne*price_commun_total/sum(nb_personne)) %>% 
   select(-nb_personne) 
 all_commun %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 29")
 ```
 
 ## Total
+
+Pour savoir ce que doit payer chaque personne/famille, on somme le coût de la viande pris par chacun et le coût des dépenses communes que doit chacun pour obtenir le tableau 29.
 
 ```{r}
 total_prices <- bind_rows(
@@ -397,10 +543,14 @@ total_prices <- bind_rows(
   group_by(qui) %>% 
   summarise(doit_payer = sum(doit_payer))
 total_prices %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 30")
 ```
 
 # Qui doit à qui ?
+
+Le tableau 31 fait un bilan de ce que chacun a payé, ce que chacun doit payer et la différence entre ce que chacun doit payer et ce que chacun a payé. En gros, si c'est positif, c'est la somme que vous devez, si c'est négatif, c'est la somme qu'on vous doit. Donc tout le monde doit de l'argent à Steph&Luc, à Clément et au Mazel.
+
+Je propose ici que tout le monde donne ce qu'il doit à Steph&Luc et que ces derniers remboursent Clément et le Mazel.
 
 ```{r}
 bilan <- full_join(
@@ -414,8 +564,13 @@ bilan <- full_join(
          doit_payer = ifelse(is.na(doit_payer), 0, doit_payer)) %>% 
   mutate(difference = doit_payer - a_paye)
 bilan %>% 
-  kable(booktabs = TRUE, digits = 2)
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau 31")
 ```
 
 
+# Annexe
 
+```{r}
+repartition %>% 
+  kable(booktabs = TRUE, digits = 2, caption = "Tableau des répartitions des recettes entre les personnes/familles")
+```
